# gis-automation

./: .gitignore  README.md  launch.bat  pyproject.toml  pytest.ini  symbology-style.db
.opencode/: mcp.json
docs/superpowers/plans/: 2026-07-21-gis-map-automation.md
docs/superpowers/specs/: 2026-07-21-gis-map-automation-design.md
gis_automate/: cli.py
gis_automate/commands/: batch_command.py  info_command.py  map_command.py  watch_command.py  web_command.py
gis_automate/engine/: __init__.py  arcpy_engine.py  qgis_engine.py
gis_automate/templates/: map.html
mcp-server/: pyproject.toml  run_mcp.bat  server.py
mcp-server/scripts/: run_info.py  run_map_cli.py  run_web_cli.py
tests/integration/: test_qgis_engine_integration.py
tests/unit/: test_qgis_engine.py
