[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "gis-automate"
version = "0.1.0"
description = "Automated map generation from shapefiles using PyQGIS"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "jinja2>=3.0",
    "watchdog>=4.0",
]

[project.scripts]
gis-automate = "gis_automate:cli"

[tool.setuptools.packages.find]
include = ["gis_automate*"]
